crates/swc_ecma_parser/tests/typescript-errors/class/get-set-asi-issue-2/input.ts
class C {
  get
  static x() { return 0 }
}
